--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
       </ul>
     </nav>
 
-    <section class="ticker">
-      <h2>Viktig beskjed: Les dette! Klikk her! Klikk her! Klikk her! Veldig viktig!</h2>
+    <section>
+      <h2><a href="#">Les mer her for viktig informasjon ang eksamen</a></h2>
     </section>
 
     <aside>
       <section>
         <h4>Nyheter</h4> <!-- bevisst: hopper over h1/h2/h3 -->
-        <p>
+        <article>
           <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/No-Image-Placeholder.svg" alt=""> <!-- bevisst: tom alt på meningsbærende bilde -->
           <a class="tiny-link" href="#">Klikk her</a> for å lese mer om ting.
-        </p>
+        </article>
         <p class="status-ok">Tilgjengelig</p>
         <p class="status-bad">Utilgjengelig</p>
       </section>
 
       <section>
         <h4>Språk</h4>
-        <p>
-          <img src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Flag_of_Norway.svg" alt="no"> <!-- bevisst: alt «no» er ikke beskrivende -->
-          <img src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Flag_of_the_United_Kingdom.svg" alt="en">
-        </p>
+        <ul>
+          <li><img src="https://upload.wikimedia.org/wikipedia/commons/b/bc/Flag_of_Norway.svg" alt="no" title ="Norsk Bokmål"></li>
+          <li><img src="https://upload.wikimedia.org/wikipedia/commons/a/ae/Flag_of_the_United_Kingdom.svg" alt="en" title="Engelsk"></li>
+        </ul>
       </section>
     </aside>
 
@@ -67,8 +67,8 @@
       <section>
         <h2>Denne teksten er veldig vanskelig å lese fordi den er smal, i store bokstaver og har lav kontrast. Den er også justert med blokkjustering som kan skape store mellomrom i linjene. Klikk her for mer info.</h2>
         
-        <div class="card form">
-          <h4>Kontakt oss</h4>
+        <article>
+          <h3>Kontakt oss</h3>
           <!-- bevisst: ingen <label> og kun placeholder, dupliserte id-er, dårlig kontrast, farge som eneste signal -->
           <form>
             <label>Navn: 
@@ -92,38 +92,55 @@
             <p class="error">skjemaet er feil utfylt</p>
             <input type="submit" value="send">
           </form>
-        </div>
+        </article>
 
-        <div class="card weird-order">
-          <h4>Mer innhold</h4>
-          <p>
-            <a href="#" tabindex="3">Les mer</a> |
-            <a href="#" tabindex="1">Klikk her</a> |
-            <a href="#" tabindex="2">Trykk her</a>
-          </p>
-          <p>
-            <span class="btn" tabindex="4">Primær handling</span>
-          </p>
-        </div>
-
-        <div class="card">
-          <h4>Tabell uten overskrifter</h4>
-          <table>
-            <tr><td>1</td><td>2</td><td>3</td></tr>
-            <tr><td>4</td><td>5</td><td>6</td></tr>
-            <tr><td>7</td><td>8</td><td>9</td></tr>
-          </table>
-        </div>
-
-        <div class="card">
-          <h4>Masse lenker med samme tekst</h4>
+        <article>
+          <h3>Mer innhold</h3>
           <ul>
-            <li><a href="#">Les mer</a></li>
-            <li><a href="#">Les mer</a></li>
-            <li><a href="#">Les mer</a></li>
-            <li><a href="#">Les mer</a></li>
+            <li><a href="#">Les mer om eksamensoppgave 1 her</a></li>
+            <li><a href="#">Mer informasjon om eksamensoppgave 2 finner du her</a></li>
+            <li><a href="#">Informasjon om eksamensoppgave 3 blir publisert her</a></li>
           </ul>
-        </div>
+          <button>Start eksamen</button>  
+        </article>
+
+        <article>
+          <h3>Tabell uten overskrifter</h3>
+          <table>
+            <tbody>
+              <tr>
+                <th>COL.1</th>
+                <th>COL.2</th>
+                <th>COL.3</th>
+              </tr>
+              <tr>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+              </tr>
+              <tr>
+                <td>4</td>
+                <td>5</td>
+                <td>6</td>
+              </tr>
+              <tr>
+                <td>7</td>
+                <td>8</td>
+                <td>9</td>
+              </tr>
+            </tbody>
+          </table>
+        </article>
+
+        <article>
+          <h3>Masse lenker med samme tekst</h3>
+          <ul>
+            <li><a href="#">Oppgave om UU</a></li>
+            <li><a href="#">Oppgave om SEO</a></li>
+            <li><a href="#">Oppgave om Semantisk HTML</a></li>
+            <li><a href="#">Oppgave om CSS Grid og flex</a></li>
+          </ul>
+        </article>
       </section>
     </main>
 
